--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".DetailActivity" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".TextDetailActivity" />
+        <activity android:name=".SearchResultActivity"/>
     </application>
 
 </manifest>
