--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         <activity android:name=".SearchActivity" />
         <activity android:name=".TextDetailActivity" />
         <activity android:name=".SearchResultActivity"/>
-        <activity android:name=".NewsApi.HistoryActivity"/>
+        <activity android:name=".HistoryActivity"/>
     </application>
 
 </manifest>
