--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,9 @@
         <activity android:name=".DetailActivity" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".TextDetailActivity" />
-        <activity android:name=".SearchResultActivity"/>
-        <activity android:name=".HistoryActivity"/>
+        <activity android:name=".SearchResultActivity" />
+        <activity android:name=".HistoryActivity" />
+        <activity android:name=".CollectionActivity"></activity>
     </application>
 
 </manifest>
