--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Sep 14 19:45:41 CST 2017
-sdk.dir=D\:\\Java\\android_sdk
+#Thu Sep 14 20:40:26 CST 2017
+sdk.dir=F\:\\Data\\Android\\sdk
